--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 </head>
 <body>
   <header>
+
     <div class="header-top">
       <ul class="ul-top">
         <li><i class="fas fa-phone-alt icon"></i>1-877-582-6735</li>
-        <li><i class="fas fa-comment-alt"></i>Chat</li>
-        <li><i class="fas fa-user"></i> in</li>
-        <li><i class="fas fa-shopping-cart"></i>Cart</li>
+        <li><i class="fas fa-comment-alt icon"></i>Chat</li>
+        <li><i class="fas fa-user icon"></i>Sign in</li>
+        <li><i class="fas fa-shopping-cart icon"></i>Cart</li>
 
       </ul>
     </div>
-    <div class="header-bottom">
+    <div class="logo">
+      <img src="img/logo_painter.png" alt="logo">
+    </div>
+    <nav class="header-bottom">
       <ul class="ul-bottom">
         <li>Products</li>
         <li>Brushes</li>
@@ -30,20 +34,51 @@
         <li>Support</li>
         <li>Learning</li>
       </ul>
-
-    </div>
+    </nav>
 
   </header>
 
   <main>
     <div class="central-foto">
+      <div class="painter">
+        <h3><i class="fas fa-angle-right"></i>Painter Essentials 7 (Windows/Mac)</h3>
+        <h4><i class="fas fa-angle-right"></i>Painting software for beginners</h4>
+        <h5><i class="fas fa-angle-right"></i>User-friendly interface</h5>
+        <h5><i class="fas fa-angle-right"></i>AI-based photo painting</h5>
+        <h5><i class="fas fa-angle-right"></i>Industry-acclaimed brushes</h5>
+        <h5><i class="fas fa-angle-right"></i>Incredible speed</h5>
+        <h5><i class="fas fa-angle-right"></i>Built-in learning</h5>
+      </div>
+
+      <div class="money-back">
+
+      </div>
 
     </div>
+
+    <nav class="nav-bottom">
+      <ul class="nav-bottom-list">
+        <li>Owerview</li>
+        <li>Features</li>
+        <li>Compare</li>
+        <li>TECH SPECS</li>
+        <li>GALLERY</li>
+        <li>LEARNING</li>
+      </ul>
+
+    </nav>
+
+    <div class="main-foto-one">
+      <div class="main-foto-frame">
+
+      </div>
+
+
+    </div>
+
   </main>
 
-  <div class="">
 
-  </div>
   <script src="dist/app.js" charset="utf-8"></script>
 </body>
 </html>
